--- a/packages/buefy/scss/components/table.scss
+++ b/packages/buefy/scss/components/table.scss
@@ -9,7 +9,7 @@ $-css-vars-map: (
     "table-sticky-header-height": $table-sticky-header-height,
 );
 
-// Register & Export CSS Variabless
+// Register & Export CSS Variables
 @include bulma-utilities.exportCSSVars($-css-vars-map);
 @include bulma-utilities.registerComponentCSSVars("b-table", $-css-vars-map);
 
@@ -74,7 +74,7 @@ $-css-vars-map: (
             border-bottom: 1px solid var(--background);
             text-align: right;
             &::before {
-                padding-right: 0.5em;
+                @include bulma-utilities.ltr-property("padding", 0.5em);
                 content: attr(data-label);
                 font-weight: var(--weight-semibold);
                 text-align: left;
@@ -129,16 +129,14 @@ $-css-vars-map: (
                 display: flex;
                 align-items: center;
                 .icon {
-                    margin-right: 0;
-                    margin-left: 0.5rem;
                     font-size: 1rem;
+                    margin-inline: 0.5em 0;
                 }
                 &.is-numeric {
                     flex-direction: row-reverse;
                     text-align: right;
                     .icon {
-                        margin-right: 0.5rem;
-                        margin-left: 0;
+                        margin-inline: 0 0.5em;
                     }
                 }
                 &.is-centered {
@@ -168,7 +166,7 @@ $-css-vars-map: (
                 transform: translateY(50%);
             }
             .multi-sort-cancel-icon {
-                margin-left: 10px;
+                @include bulma-utilities.ltr-property("margin", 0.875rem, false);
             }
             &.is-sticky {
                 position: sticky;
