--- a/packages/bulma/sass/components/navbar.sass
+++ b/packages/bulma/sass/components/navbar.sass
@@ -449,8 +449,7 @@ a.navbar-item,
       left: auto
       right: 0
     &.is-end
-      inset-inline-start: auto
-      inset-inline-end: 0
+      inset-inline: auto 0
   .navbar-divider
     display: block
   .navbar > .container,
