--- a/packages/bulma/sass/components/pagination.sass
+++ b/packages/bulma/sass/components/pagination.sass
@@ -93,8 +93,7 @@ $-css-vars-map: ("pagination-color": $pagination-color, "pagination-border-color
   font-size: var(--pagination-item-font-size)
   justify-content: center
   margin: var(--pagination-item-margin)
-  padding-inline-start: var(--pagination-item-padding-left)
-  padding-inline-end: var(--pagination-item-padding-right)
+  padding-inline: var(--pagination-item-padding-left) var(--pagination-item-padding-right)
   text-align: center
 
 .pagination-previous,
@@ -120,8 +119,7 @@ $-css-vars-map: ("pagination-color": $pagination-color, "pagination-border-color
 
 .pagination-previous,
 .pagination-next
-  padding-inline-start: var(--pagination-nav-padding-left)
-  padding-inline-end: var(--pagination-nav-padding-right)
+  padding-inline: var(--pagination-nav-padding-left) var(--pagination-nav-padding-right)
   white-space: nowrap
 
 .pagination-link
