--- a/packages/buefy/scss/components/select.scss
+++ b/packages/buefy/scss/components/select.scss
@@ -2,8 +2,7 @@
 
 .select {
     select {
-
-        padding-right: 2.5em;
+        @include bulma-utilities.ltr-property("padding", 2.5em);
         // TODO Remove below when the following problem will be fixed from Bulma or Safari:
         // https://github.com/jgthms/bulma/issues/2626
         // https://bugs.webkit.org/show_bug.cgi?id=202055
@@ -11,10 +10,11 @@
         option {
             padding: var(--control-padding-vertical) var(--control-padding-horizontal);
             color: var(--grey-dark);
-        }
-        option:disabled {
-            cursor: not-allowed;
-            opacity: 0.5;
+
+            &:disabled {
+                cursor: not-allowed;
+                opacity: 0.5;
+            }
         }
         optgroup {
             padding: 0.25em 0;
