--- a/packages/bulma/sass/components/navbar.sass
+++ b/packages/bulma/sass/components/navbar.sass
@@ -411,7 +411,7 @@ a.navbar-item,
     +utilities.ltr-property("margin", auto, false)
   .navbar-dropdown
     background-color: var(--navbar-dropdown-background-color)
-    +utilities.ltr-border-y("radius", var(--navbar-dropdown-radius), false)
+    +utilities.lph-border-radius(bottom, var(--navbar-dropdown-radius))
     border-top: var(--navbar-dropdown-border-top)
     box-shadow: 0 8px 8px var(--navbar-shadow-color)
     display: none
