--- a/packages/buefy/scss/components/tabs.scss
+++ b/packages/buefy/scss/components/tabs.scss
@@ -133,7 +133,7 @@ $-css-vars-map: (
                     a {
                         border-right-color: var(--tabs-border-bottom-color) !important;
                         border-bottom-color: transparent !important;
-                        @include bulma-utilities.ltr-border-x("radius", var(--tabs-boxed-link-radius), false);
+						@include bulma-utilities.lph-border-radius(left, var(--tabs-boxed-link-radius));
                     }
 
                     &.is-active {
@@ -151,12 +151,12 @@ $-css-vars-map: (
                     }
                     &:first-child {
                         a {
-                            @include bulma-utilities.ltr-border-y("radius", var(--tabs-toggle-link-radius));
+                            @include bulma-utilities.lph-border-radius(top, var(--tabs-toggle-link-radius));
                         }
                     }
                     &:last-child {
                         a {
-                            @include bulma-utilities.ltr-border-y("radius", var(--tabs-toggle-link-radius), false);
+                            @include bulma-utilities.lph-border-radius(bottom, var(--tabs-toggle-link-radius));
                         }
                     }
                 }
@@ -193,7 +193,7 @@ $-css-vars-map: (
                             border-right-color: transparent !important;
                             border-bottom-color: transparent !important;
                             border-left-color: var(--tabs-border-bottom-color) !important;
-                            @include bulma-utilities.ltr-border-x("radius", var(--tabs-boxed-link-radius));
+                            @include bulma-utilities.lph-border-radius(right, var(--tabs-boxed-link-radius));
                         }
 
                         &.is-active {
