ui: 💄  logical position for text-align

--- a/packages/buefy/scss/components/form.scss
+++ b/packages/buefy/scss/components/form.scss
@@ -100,7 +100,7 @@ $-css-vars-map: (
         }
         .taginput .counter {
             float: none;
-            text-align: right;
+            text-align: end;
         }
 
         &.has-addons {
