--- a/packages/bulma/sass/form/tools.sass
+++ b/packages/bulma/sass/form/tools.sass
@@ -135,7 +135,7 @@ $-css-vars-map: ("help-font-size": $help-font-size)
     flex-grow: 1
     flex-shrink: 0
     +utilities.ltr-property("margin", 1.5rem)
-    text-align: right
+    text-align: end
     +utilities.control-sizes
     &.is-small,
     &.is-normal,
