--- a/packages/buefy/scss/components/colorpicker.scss
+++ b/packages/buefy/scss/components/colorpicker.scss
@@ -43,7 +43,7 @@ $-css-vars-map: (
                         -webkit-appearance: none;
                         -moz-appearance: textfield;
                         appearance: textfield;
-                        text-align: right;
+                        text-align: end;
 
                         &::-webkit-outer-spin-button,
                         &::-webkit-inner-spin-button {
